fix button mobile

--- a/css/base.css
+++ b/css/base.css
@@ -42,7 +42,7 @@ header{
     color: white;
 }
 button{
-    padding: 12px 36px;
+    padding: 10px 20px;
     background: linear-gradient(90deg, #755bea,#55e7fc);
     border: none;
     border-radius: 50px;
